UI and UX ehhancemetns
